--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             document.getElementById('error-container').innerHTML = data;
         });
         socket.on('userSet', function(data){
-            user = data.username;
-            document.body.innerHTML = '<input type="text" id="message">\
+            user = data.username;			
+            document.body.innerHTML = '<i style="color:red;">'+ user + ' </i> : \
+			<input type="text" id="message">\
             <button type="button" name="button" onclick="sendMessage()">Send</button>\
             <div id="message-container"></div>';
         });
