--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         socket.on('userSet', function(data){
             user = data.username;			
             document.body.innerHTML = '<div class="container"><div class="row"><div class="col-sm-6 col-lg-6">\
-			<div onKeyPress="return checkSubmit(event)"><i style="color:red;">'+ user + ' </i> : \
+			<br/><div onKeyPress="return checkSubmit(event)"><i style="color:red;">'+ user + ' </i> : \
 			<input type="text" id="message">\
             <button type="button" name="button" onclick="sendMessage()" >Send</button>\
             <div id="message-container"></div></div></div></div></div>';
@@ -54,8 +54,11 @@
         })		
     </script>
     <body>
-        <div id="error-container"></div>
-        <input id="name" type="text" name="name" value="" placeholder="Enter your name!">
-        <button type="button" name="button" onclick="setUsername()">Let me chat!</button>
+	    <br/>
+		<div class="container">
+			<div id="error-container"></div>
+			<input id="name" type="text" name="name" value="" placeholder="Enter your name!">
+			<button type="button" name="button" onclick="setUsername()">Let me chat!</button>
+		</div>
     </body> 
 </html>
