--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <body id="body">
 	    <br/>
 		<div class="container">
-			<div class="row"><div class="col-sm-6 col-lg-6">				 								
+			<div class="row"><div class="col-xs-6 col-lg-6">				 								
 				<div id ="main">
 					<div id="error-container"></div>
 					<input id="name" type="text" name="name" value="" placeholder="Enter your name!">
